# homework

./: README.md
C语言大作业(象棋游戏)/: CHESS.sln  CHESS.vcxproj  CHESS.vcxproj.filters  README.md
C语言大作业(象棋游戏)/Chess/: Chess.rc  define.h  main.cpp  means.h  operation.cpp  operation.h  resource.h  show.h
C语言大作业(象棋游戏)/Debug/Chess.tlog/: Chess.lastbuildstate
C语言大作业(象棋游戏)/FILE/: motto.txt  notice.txt  palyer.txt
C语言大作业(象棋游戏)/x64/Release/: CHESS.vcxproj.FileListAbsolute.txt  Chess.exe.recipe  Chess.iobj  Chess.ipdb  Chess.res
carTask/A.note/: ROS.md
carTask/carTask1/: carTask1_报告.docx
carTask/carTask1/task1/src/image_demo/: CMakeLists.txt
carTask/carTask1/task1/src/image_demo/src/: image_demo_node.cpp
carTask/carTask1/task1/src/info_demo/: CMakeLists.txt
carTask/carTask1/task1/src/info_demo/src/: info_demo_node.cpp
carTask/homework1/: E2020196侯加喜_课后作业1.docx
carTask/homework2/: 曹代伟-车载软件开发报告2.docx
carTask/homework2/homework2/: CMakeLists.txt
carTask/homework2/homework2/carInfo/: cqusn20201000002.txt  cqusn20201000006.txt  cqusn20201000007.txt  cqusn20201000008.txt
carTask/homework2/homework2/include/: CAgxKit.h  CBatteryModule.h  CBinocularCamera.h  CChassis.h  CIntelligentCar.h  CLcd.h  CMultiLineLidar.h  CNineAxisGyroscope.h  CStudent.h  CTyre.h
carTask/homework2/homework2/src/: CAgxKit.cpp  CBatteryModule.cpp  CBinocularCamera.cpp  CChassis.cpp  CIntelligentCar.cpp  CLcd.cpp  CMultiLineLidar.cpp  CNineAxisGyroscope.cpp  CStudent.cpp  CTyre.cpp  main.cpp
carTask/homework3/: E2020196侯加喜_课后作业3.docx
task1/devel/: .rosinstall  local_setup.sh
task1/src/image_demo/: package.xml
task1/src/pcl_demo/: CMakeLists.txt
大数据分析课程设计/: index.html  报告.doc
大数据分析课程设计/css/: style.css
大数据系统开发实践/: README.md
操作系统大作业/模拟文件系统1/: file.py  main.py
操作系统大作业/模拟文件系统2/: folder.py  readme.md
操作系统大作业/银行家算法/: banker.py  banker.txt
数据库原理课程设计/: 数据库原理课程设计.docx
数据结构A八个作业/: 数据结构A八个作业.doc
机器学习/决策树/: CART.py  DecisionTree.py  README.md  SplitData.py  TreeVisualization.py  main.py  决策树.doc  决策树.md
机器学习/聚类/: AGNES.py  DBSCAN.py  KMEANS.py  LVQ.py  聚类.md
模拟文件系统1/: folder.py
模拟文件系统2/: file.py  filesystem.py  main.py
自然语言处理大作业/: 自然语言处理大作业.doc
计算机犯罪与取证/: 计算机犯罪与取证论文.docx  计算机犯罪及取证实验一.docx  计算机犯罪及取证实验三.docx  计算机犯罪及取证实验二.docx  计算机犯罪及取证实验五.docx  计算机犯罪及取证实验六.docx  计算机犯罪及取证实验四.docx
计算机网络课程设计/: PT入门实验.docx  Test.pkt(最终成品)  note.md  ~WRL2541.tmp  网课答案.md  课程报告.doc
软件工程大作业/: E-R图.docx  README.md  数据库表设计.doc
软件工程大作业/SoftwareEngineering/: pom.xml
(+241 files in other folders)
